--- a/plugins/darktrace/plugin.spec.yaml
+++ b/plugins/darktrace/plugin.spec.yaml
@@ -3,10 +3,11 @@ extension: plugin
 products: [insightconnect]
 name: darktrace
 title: Darktrace
-version: 2.0.1
+version: 2.1.0
 description: Automate the management of watched domains and alerting using the Darktrace plugin
 vendor: rapid7
 support: rapid7
+supported_versions: ["2022-08-08"]
 status: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/darktrace
@@ -602,23 +603,30 @@ types:
       type: "[]triggeredComponents"
       description: Triggeredcomponents
       required: false
-
 connection:
   url:
     title: URL
-    type: string
     description: API URL
+    type: string
     required: true
+    example: https://example.com
+  ssl_verification:
+    title: Verify SSL Certificate
+    description: Indicates whether to verify SSL certificate or not
+    type: boolean
+    required: true
+    default: true
+    example: true
   api_public_token:
     title: API Public Token
-    type: credential_secret_key
     description: Enter API public token
+    type: credential_secret_key
     required: true
     example: 1452d258-7c12-7c12-7c12-1452d25874c2
   api_private_token:
     title: API Private Token
-    type: credential_secret_key
     description: Enter API private token
+    type: credential_secret_key
     required: true
     example: 1452d258-7c12-7c12-7c12-1452d25874c2
 actions:
@@ -701,7 +709,7 @@ triggers:
       minscore:
         title: Min Score
         type: integer
-        description: Return only breaches with a minimum score. Valid values are 0-100.
+        description: Return only breaches with a minimum score. Valid values are 0-100
         example: 10
         required: false
       pbid:
