--- a/plugins/rest/plugin.spec.yaml
+++ b/plugins/rest/plugin.spec.yaml
@@ -67,6 +67,18 @@ connection:
     required: true
     default: true
     example: true
+  certificate:
+    title: Certificate
+    description: Certificate for mutual TLS
+    type: file
+    required: false
+    example:
+  key:
+    title: Key
+    description: Private key for mutual TLS
+    type: file
+    required: false
+    example:
   basic_auth_credentials:
     title: Basic Auth Credentials
     description: Username and password. Provide if you choose Basic Auth or Digest Auth authentication type
