--- a/plugins/rest/plugin.spec.yaml
+++ b/plugins/rest/plugin.spec.yaml
@@ -67,13 +67,13 @@ connection:
     required: true
     default: true
     example: true
-  certificate:
-    title: Certificate
-    description: Certificate for mutual TLS
+  client_certificate:
+    title: Client Certificate
+    description: Client certificate for mutual TLS
     type: file
     required: false
-  key:
-    title: Key
+  private_key:
+    title: Private Key
     description: Private key for mutual TLS
     type: file
     required: false
