--- a/plugins/ipstack/plugin.spec.yaml
+++ b/plugins/ipstack/plugin.spec.yaml
@@ -4,10 +4,11 @@ products: [insightconnect]
 name: ipstack
 title: IPStack
 description: Lookup geographical information for a host
-version: 3.0.0
+version: 3.0.1
 vendor: rapid7
 support: community
 status: []
+cloud_ready: true
 supported_versions: ['2021-11-30T18:50:40Z']
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/ipstack
@@ -18,7 +19,7 @@ tags:
   - ipstack
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [geoip, ipstack]
+  keywords: [geoip, ipstack, cloud_enabled]
   features: []
 types:
   time_zone:
