--- a/plugins/jira/requirements.txt
+++ b/plugins/jira/requirements.txt
@@ -2,3 +2,4 @@
 # All dependencies must be version-pinned, eg. requests==1.2.0
 # See: https://pip.pypa.io/en/stable/user_guide/#requirements-files
 jira==2.0.0
+timeout-decorator==0.5.0
