--- a/plugins/microsoft_teams/plugin.spec.yaml
+++ b/plugins/microsoft_teams/plugin.spec.yaml
@@ -22,7 +22,7 @@ tags:
 - chat
 hub_tags:
   use_cases: [alerting_and_notifications, application_management, threat_detection_and_response, user_management]
-  keywords: [microsoft_teams, office365, chat, cloud-enabled]
+  keywords: [microsoft_teams, office365, chat, cloud_enabled]
   features: []
 types:
   team:
