--- a/plugins/armorblox/plugin.spec.yaml
+++ b/plugins/armorblox/plugin.spec.yaml
@@ -3,15 +3,16 @@ extension: plugin
 products: [insightconnect]
 name: armorblox
 title: Armorblox
-description: Armorblox secures enterprise communications over email and other cloud office applications with the power of Natural Language Understanding. The Armorblox platform connects over APIs and analyzes thousands of signals to understand the context of communications and protect people and data from compromise. Over 56,000 organizations use Armorblox to stop BEC and targeted phishing attacks, protect sensitive PII and PCI, and automate remediation of user-reported email threats. Armorblox was featured in the 2019 Forbes AI 50 list and was named a 2020 Gartner Cool Vendor in Cloud Office Security. Founded in 2017, Armorblox is headquartered in Sunnyvale, CA and backed by General Catalyst and Next47.
+description: Armorblox secures enterprise communications over email and other cloud office applications with the power of Natural Language Understanding. The Armorblox platform connects over APIs and analyzes thousands of signals to understand the context of communications and protect people and data from compromise. Over 56,000 organizations use Armorblox to stop BEC and targeted phishing attacks, protect sensitive PII and PCI, and automate remediation of user-reported email threats. Armorblox was featured in the 2019 Forbes AI 50 list and was named a 2020 Gartner Cool Vendor in Cloud Office Security. Founded in 2017, Armorblox is headquartered in Sunnyvale, CA and backed by General Catalyst and Next47
 version: 1.0.0
 vendor: armorblox
-support: armorblox
+support: rapid7
+supported_versions: ["1.0.0"]
 status: []
 tags: ["Alerts", "Attack", "Breach", "Compliance", "Email", "Forensics", "GDPR","HIPAA","Incident Response","IT","Machine Learning","Malware","PII","Scam","Security","Security Analytics","Spam","Threat Intelligence"]
 hub_tags:
-  use_cases: ["Email Communication"]
-  keywords: ["Email Security", "Cloud Security", "Abuse Mailbox", "Data Loss Protection", "Data Leaks", "Compliance"]
+  use_cases: ['cloud_security', 'remediation_management',  'threat_detection_and_response']
+  keywords: ['threat_intelligence']
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/armorblox
@@ -181,10 +182,11 @@ triggers:
         type: integer
         required: false
         default: 600
+        example: 600
     output:
       incidents:
         title: Incidents
-        description: A list of 100 incidents identified by Armorblox
+        description: A list of incidents identified by Armorblox
         type: "[]incident"
         required: true
 
@@ -202,6 +204,6 @@ actions:
     output:
       remediation_details:
         title: Remediation Details
-        description: Remediation Action of the requested threat identified by Armorblox
+        description: Remediation Action of the requested incident identified by Armorblox
         type: string
         required: true
