--- a/plugins/connectwise/plugin.spec.yaml
+++ b/plugins/connectwise/plugin.spec.yaml
@@ -37,7 +37,7 @@ types:
      description: Name
      type: string
      required: false
-   _info:
+   info:
      title: Info
      description: Additional information
      type: object
@@ -58,7 +58,7 @@ types:
      description: Type
      type: string
      required: false
-   _info:
+   info:
      title: Info
      description: Additional information
      type: object
@@ -119,7 +119,7 @@ types:
      description: Name
      type: string
      required: false
-   _info:
+   info:
      title: Info
      description: Additional information
      type: object
@@ -135,7 +135,7 @@ types:
      description: Summary
      type: string
      required: false
-   _info:
+   info:
      title: Info
      description: Additional information
      type: object
@@ -151,7 +151,7 @@ types:
      description: Name
      type: string
      required: false
-   _info:
+   info:
      title: Info
      description: Additional information
      type: object
@@ -453,7 +453,7 @@ types:
      description: Integrator tags
      type: '[]string'
      required: false
-   _info:
+   info:
      title: Info
      description: Info
      type: object
@@ -959,7 +959,7 @@ types:
      description: Integrator tags
      type: '[]string'
      required: false
-   _info:
+   info:
      title: Info
      description: Info
      type: object
@@ -1045,7 +1045,7 @@ types:
      description: External flag
      type: boolean
      required: false
-   _info:
+   info:
      title: Info
      description: Info
      type: object
