--- a/plugins/microsoft_teams/Dockerfile
+++ b/plugins/microsoft_teams/Dockerfile
@@ -7,15 +7,6 @@ LABEL sdk=python
 # Add any custom package dependencies here
 # NOTE: Add pip packages to requirements.txt
 
-# Need gcc for maya
-RUN apk add --no-cache --virtual .build-deps \
-                                        make \
-                                        gcc \
-                                        libc-dev \
-                                        libffi-dev \
-                                        openssl-dev \
-                                        libxml2-dev \
-                                        libxslt-dev
 # End package dependencies
 
 # Add source code
@@ -31,6 +22,6 @@ RUN python setup.py build && python setup.py install
 
 # User to run plugin code. The two supported users are: root, nobody
 # Need root for CA bundle  
-USER root
+USER nobody
 
 ENTRYPOINT ["/usr/local/bin/icon_microsoft_teams"]
