--- a/plugins/google_directory/plugin.spec.yaml
+++ b/plugins/google_directory/plugin.spec.yaml
@@ -173,6 +173,22 @@ actions:
         description: User's contact information
         required: true
         type: contact
+  get_user_contact_by_name:
+    title: Get User's Contact Information By Name
+    description: Retrieves all contact information from a specific user in the domain by name
+    input:
+      name:
+        title: User's Name
+        description: Full name of user
+        type: string
+        required: true
+        example: Example User
+    output:
+      contact:
+        title: Contact
+        description: User's contact information
+        required: true
+        type: contact
   suspend_user:
     title: Suspend User
     description: Suspends a user account
