--- a/plugins/aws_ec2/plugin.spec.yaml
+++ b/plugins/aws_ec2/plugin.spec.yaml
@@ -5,11 +5,11 @@ name: aws_ec2
 title: AWS EC2
 vendor: rapid7
 support: rapid7
-supported_versions: ["botocore 1.26.5"]
+supported_versions: ["botocore 1.27.96"]
 status: []
 description: Amazon Elastic Compute Cloud (Amazon EC2) provides resizable computing
   capacity in the Amazon Web Services (AWS) cloud. This plugin allows you to manage your EC2 environment
-version: 1.1.0
+version: 1.2.0
 resources:
   vendor_url: https://www.amazon.com
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/aws_ec2
@@ -758,6 +758,18 @@ connection:
     type: string
     example: "us-east-1"
     required: true
+  role_arn:
+    title: Role ARN
+    description: AWS IAM role ARN to assume
+    type: string
+    required: false
+    example: arn:aws:iam::123456781111:role/ExampleRole 
+  external_id:
+    title: External ID
+    description: External ID given during role creation
+    type: string
+    required: false
+    example: exampleexternalid
 actions:
   authorize_security_group_egress:
     title: Authorize Security Group Egress
@@ -826,6 +838,18 @@ actions:
         description: Not supported
         required: false
         example: "otheraccountgroup"
+      role_arn:
+        title: Role ARN
+        description: AWS IAM role ARN to assume
+        type: string
+        required: false
+        example: arn:aws:iam::123456781111:role/ExampleRole 
+      external_id:
+        title: External ID
+        description: External ID given during role creation
+        type: string
+        required: false
+        example: exampleexternalid
     output:
       response_metadata:
         title: Response Metadata
@@ -908,6 +932,18 @@ actions:
           without actually making the request, and provides an error response
         required: false
         example: false
+      role_arn:
+        title: Role ARN
+        description: AWS IAM role ARN to assume
+        type: string
+        required: false
+        example: arn:aws:iam::123456781111:role/ExampleRole 
+      external_id:
+        title: External ID
+        description: External ID given during role creation
+        type: string
+        required: false
+        example: exampleexternalid
     output:
       response_metadata:
         title: Response Metadata
@@ -937,6 +973,18 @@ actions:
           without actually making the request, and provides an error response
         required: false
         example: false
+      role_arn:
+        title: Role ARN
+        description: AWS IAM role ARN to assume
+        type: string
+        required: false
+        example: arn:aws:iam::123456781111:role/ExampleRole 
+      external_id:
+        title: External ID
+        description: External ID given during role creation
+        type: string
+        required: false
+        example: exampleexternalid
     output:
       response_metadata:
         title: Response Metadata
@@ -978,6 +1026,18 @@ actions:
           without actually making the request, and provides an error response
         required: false
         example: false
+      role_arn:
+        title: Role ARN
+        description: AWS IAM role ARN to assume
+        type: string
+        required: false
+        example: arn:aws:iam::123456781111:role/ExampleRole 
+      external_id:
+        title: External ID
+        description: External ID given during role creation
+        type: string
+        required: false
+        example: exampleexternalid
     output:
       response_metadata:
         title: Response Metadata
@@ -1056,6 +1116,18 @@ actions:
         description: Not supported
         required: false
         example: "ownergroup"
+      role_arn:
+        title: Role ARN
+        description: AWS IAM role ARN to assume
+        type: string
+        required: false
+        example: arn:aws:iam::123456781111:role/ExampleRole 
+      external_id:
+        title: External ID
+        description: External ID given during role creation
+        type: string
+        required: false
+        example: exampleexternalid
     output:
       response_metadata:
         title: Response Metadata
@@ -1138,6 +1210,18 @@ actions:
           without actually making the request, and provides an error response
         required: false
         example: true
+      role_arn:
+        title: Role ARN
+        description: AWS IAM role ARN to assume
+        type: string
+        required: false
+        example: arn:aws:iam::123456781111:role/ExampleRole 
+      external_id:
+        title: External ID
+        description: External ID given during role creation
+        type: string
+        required: false
+        example: exampleexternalid
     output:
       response_metadata:
         title: Response Metadata
@@ -1181,6 +1265,18 @@ actions:
                "description": "Blah"
             }],
             "to_port": 8090}']
+      role_arn:
+        title: Role ARN
+        description: AWS IAM role ARN to assume
+        type: string
+        required: false
+        example: arn:aws:iam::123456781111:role/ExampleRole 
+      external_id:
+        title: External ID
+        description: External ID given during role creation
+        type: string
+        required: false
+        example: exampleexternalid
     output:
       response_metadata:
         title: Response Metadata
@@ -1228,6 +1324,18 @@ actions:
                "description": "Blah"
             }],
             "to_port": 8090}']
+      role_arn:
+        title: Role ARN
+        description: AWS IAM role ARN to assume
+        type: string
+        required: false
+        example: arn:aws:iam::123456781111:role/ExampleRole 
+      external_id:
+        title: External ID
+        description: External ID given during role creation
+        type: string
+        required: false
+        example: exampleexternalid
     output:
       response_metadata:
         title: Response Metadata
