MC-1327 Fix help.md validator issue

--- a/plugins/freshdesk/plugin.spec.yaml
+++ b/plugins/freshdesk/plugin.spec.yaml
@@ -553,25 +553,25 @@ actions:
         example: 103021764889
       email:
         title: Email
-        description: Email address of the requester. If no contact exists with this email address in Freshdesk, it will be added as a new contact
+        description: Email address of the requester. If no contact exists with this email address in FreshDesk, it will be added as a new contact
         type: string
         required: false
         example: user@example.com
       phone:
         title: Phone
-        description: Phone number of the requester. If no contact exists with this phone number in Freshdesk, it will be added as a new contact. If the phone number is set and the email address is not, then the name attribute is mandatory
+        description: Phone number of the requester. If no contact exists with this phone number in FreshDesk, it will be added as a new contact. If the phone number is set and the email address is not, then the name attribute is mandatory
         type: string
         required: false
         example: 611800861902
       twitterId:
         title: Twitter ID
-        description: Twitter handle of the requester. If no contact exists with this handle in Freshdesk, it will be added as a new contact
+        description: Twitter handle of the requester. If no contact exists with this handle in FreshDesk, it will be added as a new contact
         type: string
         required: false
         example: 123654789
       uniqueExternalId:
         title: Unique External ID
-        description: External ID of the requester. If no contact exists with this external ID in Freshdesk, they will be added as a new contact
+        description: External ID of the requester. If no contact exists with this external ID in FreshDesk, they will be added as a new contact
         type: string
         required: false
         example: my_example_id
@@ -726,25 +726,25 @@ actions:
         example: 103021764889
       email:
         title: Email
-        description: Email address of the requester. If no contact exists with this email address in Freshdesk, it will be added as a new contact
+        description: Email address of the requester. If no contact exists with this email address in FreshDesk, it will be added as a new contact
         type: string
         required: false
         example: user@example.com
       phone:
         title: Phone
-        description: Phone number of the requester. If no contact exists with this phone number in Freshdesk, it will be added as a new contact. If the phone number is set and the email address is not, then the name attribute is mandatory
+        description: Phone number of the requester. If no contact exists with this phone number in FreshDesk, it will be added as a new contact. If the phone number is set and the email address is not, then the name attribute is mandatory
         type: string
         required: false
         example: 611800861902
       twitterId:
         title: Twitter ID
-        description: Twitter handle of the requester. If no contact exists with this handle in Freshdesk, it will be added as a new contact
+        description: Twitter handle of the requester. If no contact exists with this handle in FreshDesk, it will be added as a new contact
         type: string
         required: false
         example: 123654789
       uniqueExternalId:
         title: Unique External ID
-        description: External ID of the requester. If no contact exists with this external ID in Freshdesk, they will be added as a new contact
+        description: External ID of the requester. If no contact exists with this external ID in FreshDesk, they will be added as a new contact
         type: string
         required: false
         example: my_example_id
